--- a/Authentication/NodeJS/src/public/index.html
+++ b/Authentication/NodeJS/src/public/index.html
@@ -7,6 +7,35 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Auth</h1>
+    <h2>Register</h2>
+    <form action="" id="register-form">
+      <input type="email" name="email" />
+      <input type="password" name="password" />
+      <button type="submit">Register</button>
+    </form>
+
+    <script>
+      (() => {
+        const form = document.getElementById('register-form');
+
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          try {
+            const values = Object.values(form).reduce((obj, field) => {
+              if (field.name) obj[field.name] = field.value;
+              return obj;
+            }, {});
+
+            const res = await fetch('/api/register', {
+              method: 'POST',
+              body: JSON.stringify(values),
+              headers: { 'Content-type': 'application/json; charset=UTF-8' },
+            });
+          } catch (error) {
+            console.error(error);
+          }
+        });
+      })();
+    </script>
   </body>
 </html>
