--- a/Authentication/NodeJS/src/public/index.html
+++ b/Authentication/NodeJS/src/public/index.html
@@ -14,19 +14,47 @@
       <button type="submit">Register</button>
     </form>
 
+    <h2>Log In</h2>
+    <form action="" id="login-form">
+      <input type="email" name="email" />
+      <input type="password" name="password" />
+      <button type="submit">Log In</button>
+    </form>
+
     <script>
       (() => {
-        const form = document.getElementById('register-form');
+        const registerForm = document.getElementById('register-form');
+        const loginForm = document.getElementById('login-form');
 
-        form.addEventListener('submit', async (e) => {
+        // Register
+        registerForm.addEventListener('submit', async (e) => {
           e.preventDefault();
           try {
-            const values = Object.values(form).reduce((obj, field) => {
+            const values = Object.values(registerForm).reduce((obj, field) => {
               if (field.name) obj[field.name] = field.value;
               return obj;
             }, {});
 
             const res = await fetch('/api/register', {
+              method: 'POST',
+              body: JSON.stringify(values),
+              headers: { 'Content-type': 'application/json; charset=UTF-8' },
+            });
+          } catch (error) {
+            console.error(error);
+          }
+        });
+
+        // Login
+        loginForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          try {
+            const values = Object.values(loginForm).reduce((obj, field) => {
+              if (field.name) obj[field.name] = field.value;
+              return obj;
+            }, {});
+
+            const res = await fetch('/api/authorize', {
               method: 'POST',
               body: JSON.stringify(values),
               headers: { 'Content-type': 'application/json; charset=UTF-8' },
