--- a/Authentication/NodeJS/src/public/index.html
+++ b/Authentication/NodeJS/src/public/index.html
@@ -9,15 +9,15 @@
   <body>
     <h2>Register</h2>
     <form action="" id="register-form">
-      <input type="email" name="email" />
-      <input type="password" name="password" />
+      <input type="email" name="email" required />
+      <input type="password" name="password" required />
       <button type="submit">Register</button>
     </form>
 
     <h2>Log In</h2>
     <form action="" id="login-form">
-      <input type="email" name="email" />
-      <input type="password" name="password" />
+      <input type="email" name="email" required />
+      <input type="password" name="password" required />
       <button type="submit">Log In</button>
     </form>
 
