added logout method

--- a/Authentication/NodeJS/src/public/index.html
+++ b/Authentication/NodeJS/src/public/index.html
@@ -13,15 +13,26 @@
       <input type="password" name="password" required />
       <button type="submit">Register</button>
     </form>
-
+    <hr />
     <h2>Log In</h2>
     <form action="" id="login-form">
       <input type="email" name="email" required />
       <input type="password" name="password" required />
       <button type="submit">Log In</button>
     </form>
+    <hr />
+    <button onclick="logout()">Logout</button>
 
     <script>
+      const logout = async () => {
+        try {
+          const res = await fetch('/api/logout', {
+            method: 'POST',
+          });
+        } catch (error) {
+          console.error(error);
+        }
+      };
       (() => {
         const registerForm = document.getElementById('register-form');
         const loginForm = document.getElementById('login-form');
